ansible/roles/app/files/hello-world-nodejs.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nodejs
  labels:
    app: hello-world-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nodejs
  template:
    metadata:
      labels:
        app: hello-world-nodejs
    spec:
      containers:
      - name: hello-world-nodejs
        image: borjaromero/hello-world-nodejs
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-nodejs-service
spec:
  selector:
    app: hello-world-nodejs
  type: NodePort
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
