ansible/roles/app/files/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /
   nginx.ingress.kubernetes.io/add-base-url: "true"

spec:
  rules:
  - host: borjary.com
    http:
      paths:
      - path: /hello-world-java
        pathType: Prefix
        backend:
          service:
            name: hello-world-java-service
            port:
              number: 8082
      - path: /hello-world-nodejs
        pathType: Prefix
        backend:
          service:
            name: hello-world-nodejs-service
            port:
              number: 8083
      - path: /hello-world-python
        pathType: Prefix
        backend:
          service:
            name: hello-world-python-service
            port:
              number: 8084
